fix: align the h2, replace the last name in Testimonials

--- a/src/app/landing/LandingPage.css
+++ b/src/app/landing/LandingPage.css
@@ -50,6 +50,7 @@
 
 .LandingPage .IntroBody > .IntroTop > h1 {
   padding-bottom: 24px;
+  margin-left: 36px;
 }
 
 .LandingPage .IntroBody > .IntroTop > p {
